tests/error/poly_errors/pass_poly_free.err
Error: Type mismatch (at $FILE:19:8)
   | 
17 | @guppy
18 | def main() -> None:
19 |     foo(bar)
   |         ^^^ Expected argument of type `?T -> ?T`, got `forall T. T -> T`

Note: Couldn't infer an instantiation for type variable `?T` (higher-rank
polymorphic types are not supported)

Guppy compilation failed due to 1 previous error
